--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "baseUrl": ".",
-    "rootDir": "."
+    "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
