--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@vercel/blob": "^0.19.0",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "^10.4.16",
@@ -23,16 +28,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "typescript": "^5.3.3"
+    "eslint-config-next": "^14.0.4"
   }
 }
